--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,5 +3,5 @@ main:
   - title: "About Me"
     url: "/"
 
-  - title: "Thoughts Gallery"
+  - title: "Thoughts-Gallery"
     url: "/#thougts-gallery"
