--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Yikai Zhang"
-  avatar           : "images/profile.jpg"
+  avatar           : "images/pf.jpg"
   bio              : "Life is for experience"
   location         : "Madison, WI, USA"
   employer         :
