--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Yikai Zhang"
   avatar           : "images/pf.jpg"
-  bio              : "To live is to risk it all!"
+  bio              : "Let's find out!"
   location         : "Madison, WI, USA"
   employer         :
   pubmed           : 
