Update author bio in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Yikai Zhang"
   avatar           : "images/pf.jpg"
-  bio              : "Let's find out!"
+  bio              : "Do the hard thing first!"
   location         : "Madison, WI, USA"
   employer         :
   pubmed           : 
